fix navbar bottom spacing

--- a/src/features/nav/TabBar.css
+++ b/src/features/nav/TabBar.css
@@ -16,8 +16,8 @@
   user-select: none;
   -webkit-user-select: none;
   -webkit-user-drag: none;
-  touch-action: manipulation;
-  overscroll-behavior: contain;
+  touch-action: none;
+  overscroll-behavior: none;
 }
 
 .tabbar__btn {
@@ -34,6 +34,7 @@
   user-select: none;
   -webkit-user-select: none;
   -webkit-user-drag: none;
+  touch-action: none;
 }
 
 .tabbar__btn.is-active {
