--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,8 @@ body,
 #root {
   margin: 0;
   height: 100%;
+  overflow: hidden;
+  overscroll-behavior: none;
 }
 
 body {
